--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 h1	{
 color: purple;
 font-size: 70px;
-font-family: calibri
+font-family: calibri;
+background-size: cover;
+background: center
 }
 body{
 color: blue;
@@ -11,5 +13,20 @@ background-color: grey
 
  }
  p{ 
+ 	border: 5px solid;
+ 	padding: 50px; 
+ 	margin : 100px
+
+  }
+  a{
+  	text-decoration: none;
+  	color : white;
+  	border-radius: 5px;
+  	border-right: 50%;
+  	
+
+
+
+
 
   }
